--- a/backend/pulser/pom.xml
+++ b/backend/pulser/pom.xml
@@ -8,7 +8,32 @@
    <packaging>war</packaging>
    <name>Java EE 6 webapp project</name>
    <description>A starter Java EE 6 webapp project for use on JBoss AS 7 / EAP 6, generated from the jboss-javaee6-webapp archetype</description>
-
+   <url></url>
+   
+   <developers>
+      <developer>
+      <id>pokstar</id>
+      <name>Louis-Philippe Lebouthillier</name>
+      <email>pokstar@gmail.com</email>
+      <organization>Ericsson</organization>
+      <roles>
+         <role>Dev</role>
+      </roles>
+      <timezone>-5</timezone>
+    </developer>
+    <developer>
+      <id>EMC</id>
+      <name>Stanley Woo</name>
+      <email></email>
+      <organization></organization>
+      <roles>
+        <role>Dev</role>
+      </roles>
+      <timezone>-5</timezone>
+    </developer>
+  </developers>
+   
+   
    <properties>
       <!-- Explicitly declaring the source encoding eliminates the following 
          message: -->
@@ -140,6 +165,42 @@
          <version>1.0.0.CR4</version>
          <scope>test</scope>               
       </dependency>
+	  
+	  <dependency>
+	     <groupId>org.jboss.logging</groupId>
+	     <artifactId>jboss-logging</artifactId>
+	     <version>3.1.0.GA</version>
+      </dependency>
+	  
+	  <dependency>
+         <groupId>org.restlet.jee</groupId>
+         <artifactId>org.restlet</artifactId>
+         <version>2.0.11</version>
+      </dependency>
+      
+	  <dependency>
+         <groupId>org.restlet.jee</groupId>
+         <artifactId>org.restlet.ext.jackson</artifactId>
+         <version>2.0.11</version>
+      </dependency>
+      
+	  <dependency>
+         <groupId>org.restlet.jee</groupId>
+         <artifactId>org.restlet.ext.jdbc</artifactId>
+         <version>2.0.11</version>
+      </dependency>
+      
+	  <dependency>
+         <groupId>org.restlet.jee</groupId>
+         <artifactId>org.restlet.ext.json</artifactId>
+         <version>2.0.11</version>
+      </dependency>
+      
+	  <dependency>
+         <groupId>org.restlet.jee</groupId>
+         <artifactId>org.restlet.ext.servlet</artifactId>
+         <version>2.0.11</version>
+      </dependency>
 
    </dependencies>
 
@@ -220,6 +281,13 @@
                   <enabled>false</enabled>
                </snapshots>
             </repository>
+			
+			<repository>
+               <id>maven-restlet</id>
+               <name>Public online Restlet repository</name>
+            <url>http://maven.restlet.org</url>
+    </repository>
+			
          </repositories>
 
          <pluginRepositories>
