--- a/pulser/pom.xml
+++ b/pulser/pom.xml
@@ -265,15 +265,17 @@
 				<artifactId>jboss-as-maven-plugin</artifactId>
 				<version>7.1.0.Beta1b</version>
 			</plugin>
-			<!-- generate the Eclipse project files when 'mvn eclipse:eclipse' is 
-				executed -->
+
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.9</version>
 				<configuration>
 					<downloadSources>true</downloadSources>
 					<downloadJavadocs>true</downloadJavadocs>
 				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
 
@@ -294,6 +296,16 @@
 						<version>2.4.3</version>
 						<configuration>
 							<skip>true</skip>
+						</configuration>
+					</plugin>
+
+					<!-- generate the Eclipse project files when 'mvn eclipse:eclipse' is 
+						executed -->
+					<plugin>
+						<artifactId>maven-eclipse-plugin</artifactId>
+						<configuration>
+							<downloadSources>true</downloadSources>
+							<downloadJavadocs>true</downloadJavadocs>
 						</configuration>
 					</plugin>
 				</plugins>
@@ -431,7 +443,6 @@
 				</repository>
 			</repositories>
 		</profile>
-
 	</profiles>
 
 </project>
