--- a/android/tick/AndroidManifest.xml
+++ b/android/tick/AndroidManifest.xml
@@ -1,15 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="me.tick.android.client" android:versionCode="1" android:versionName="1.0-SNAPSHOT">
+    package="me.tick.android.client"
+    android:versionCode="1"
+    android:versionName="1.0-SNAPSHOT" >
 
-  <application android:icon="@drawable/icon" android:label="@string/app_name">
-    <activity android:name=".TickActivity">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-    </activity>
-  </application>
+    <!-- Requires Android 1.6 up to 2.1 -->
+    <uses-sdk
+        android:minSdkVersion="10"
+        android:targetSdkVersion="10" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
+    <application
+        android:description="@string/app_desc"
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
+        <activity android:name=".TickActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <activity android:name=".TickPreferencesXML" android:label="Prefs" />
+        
+        <!--  <activity
+            android:name=".TickPreferencesActivity"
+            android:label="@string/preference_title"
+            android:theme="@android:style/Theme.Dialog" >
+            <intent-filter>
+                <action android:name="PRFERENCE_ACTION" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity> -->
+    </application>
+
+    <!-- Track Market installs -->
+    <!--
+  <receiver android:name="com.admob.android.ads.analytics.InstallReceiver" android:exported="true">
+    <intent-filter>
+      <action android:name="com.android.vending.INSTALL_REFERRER" />
+    </intent-filter>
+  </receiver>
+    -->
 
 </manifest>
-
