--- a/pulser/pom.xml
+++ b/pulser/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.pulse.server</groupId>
-	<artifactId>Pulse</artifactId>
+	<artifactId>pulser</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>Java EE 6 webapp project</name>
